noinst_LIBRARIES = libssh_session.a # libssh_exception.a libssh_keys.a libssh_channel.a
#libssh_exception_a_SOURCES = ssh_exception.cxx ssh_exception.h
#libssh_keys_a_SOURCES = ssh_keys.cxx ssh_keys.h
libssh_session_a_SOURCES = ssh_session.cxx ssh_session.h
#libssh_channel_a_SOURCES = ssh_channel.cxx ssh_channel.h
