6relayd:
	@echo "WRT: WARNING: NO DEFAULT 6RELAYD CONFIG FILE, MAKING EMPTY FILE"
	touch ./6relayd
dhcp:
	@echo "WRT: WARNING: NO DEFAULT DHCP CONFIG FILE, MAKING EMPTY FILE"
	touch ./dhcp
dhcp6c:
	@echo "WRT: WARNING: NO DEFAULT DHCP6C CONFIG FILE, MAKING EMPTY FILE"
	touch ./dhcp6c
dropbear:
	@echo "WRT: WARNING: NO DEFAULT DROPBEAR CONFIG FILE, MAKING EMPTY FILE"
	touch ./dropbear
firewall:
	@echo "WRT: WARNING: NO DEFAULT FIREWALL CONFIG FILE, MAKING EMPTY FILE"
	touch ./firewall
radvd:
	@echo "WRT: WARNING: NO DEFAULT RADVD CONFIG FILE, MAKING EMPTY FILE"
	touch ./radvd
