dhcp:
	@echo "WRT: WARNING: NO DEFAULT WR703N RADIO FILE, MAKING EMPTY FILE"
	touch ./wr703n
dhcp6c:
	@echo "WRT: WARNING: NO DEFAULT MR3020 RADIO FILE, MAKING EMPTY FILE"
	touch ./mr3020
dropbear:
	@echo "WRT: WARNING: NO DEFAULT WRT54G RADIO FILE, MAKING EMPTY FILE"
	touch ./wrt54g
firewall:
	@echo "WRT: WARNING: NO DEFAULT WHRHPG300N RADIO FILE, MAKING EMPTY FILE"
	touch ./whrhpg300n
