noinst_LTLIBRARIES = libssh_session.la   \
				     libssh_exception.la
				   ##libssh_channel.la   \
				   ##libssh_keys.la
##libssh_keys_la_SOURCES = ssh_keys.cxx
##libssh_channel_la_SOURCES = ssh_channel.cxx
libssh_session_la_SOURCES = ssh_session.cxx
libssh_exception_la_SOURCES = ssh_exception.cxx
